--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "scanpay",
-  "version": "1.2.3",
-  "description": "A node.js library for Scanpay",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "1.3.0",
+  "description": "A node.js client library for Scanpay",
+  "keywords": [
+    "scanpay",
+    "payment gateway"
+  ],
+  "author": "Scanpay <support@scanpay.dk> (https://scanpay.dk)",
+  "homepage": "https://github.com/scanpaydk/node-scanpay#readme",
+  "license": "MIT",
+  "main": "lib/scanpay.js",
+  "files": ["lib/scanpay.js"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scanpaydk/node-scanpay.git"
   },
-  "keywords": [
-    "scanpay",
-    "payments",
-    "payment gateway",
-    "Scandinavia"
-  ],
   "engines": {
     "node": ">=6.6.0"
   },
-  "author": "Scanpay <support@scanpay.dk> (https://scanpay.dk)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/scanpaydk/node-scanpay/issues"
   },
-  "homepage": "https://github.com/scanpaydk/node-scanpay#readme"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
