--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanpay",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "A node.js client library for Scanpay",
   "keywords": [
     "scanpay",
@@ -10,7 +10,10 @@
   "homepage": "https://github.com/scanpaydk/node-scanpay#readme",
   "license": "MIT",
   "main": "lib/scanpay.js",
-  "files": ["lib/scanpay.js"],
+  "files": [
+    "lib/scanpay.js",
+    "lib/error.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scanpaydk/node-scanpay.git"
